--- a/src/main/resources/templates/producto/editar.html
+++ b/src/main/resources/templates/producto/editar.html
@@ -1,10 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments :: headerfiles">
 </head>
 <body>
+<header th:insert="fragments :: nav"></header>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 mx-auto">
+            <h5 class="mb-4">Editar producto</h5>
+            <form th:action="@{/producto/actualizar}" method="post">
+                <input type="hidden" id="id" name="id" th:value="${producto.id}">
+                <div class="form-group">
+                    <label for="nombre">Nombre del producto</label>
+                    <input type="text" class="form-control" id="nombre" name="nombre" required="required" autocomplete="off" th:value="${producto.nombre}">
+                </div>
+                <div class="form-group">
+                    <label for="precio">Precio</label>
+                    <input type="number" class="form-control" id="precio" name="precio" required="required" autocomplete="off" th:value="${producto.precio}">
+                </div>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-outline-success btn-block">
+                        <i class="fas fa-sync-alt"></i> Actualizar
+                    </button>
+                </div>
+            </form>
+            <a th:href="@{/producto/lista}" style="text-decoration: none;">
+                <button class="btn btn-outline-info btn-block">
+                    <i class="fa-solid fa-arrow-circle-left"></i> Volver
+                </button>
+            </a>
+            <div th:if="${error}" class="alert alert-danger alert-dismissible fade show mt-2" role="alert">
+                <strong>Atención!</strong> <span th:text="${error}"></span>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<footer th:insert="fragments :: footer"></footer>
+<div th:insert="fragments :: scripts"></div>
 </body>
 </html>
