--- a/src/main/resources/templates/producto/lista.html
+++ b/src/main/resources/templates/producto/lista.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:insert="fragments :: headerfiles">
 </head>
 <body>
+<header th:insert="fragments :: nav"></header>
 
+<div class="container">
+    <table class="table text-center">
+        <thead class="thead-light">
+        <tr>
+            <th scope="col">Nombre</th>
+            <th scope="col">Precio</th>
+            <th scope="col">Ver</th>
+            <th scope="col">Editar</th>
+            <th scope="col">Eliminar</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="producto: ${productos}">
+            <td th:text="${producto.nombre}"></td>
+            <td th:text="${producto.precio}"></td>
+            <td><a th:href="@{'/producto/detalle/' + ${producto.id}}"><button class="btn btn-outline-primary"><i class="far fa-eye"></i></button></a></td>
+            <td><a th:href="@{'/producto/editar/' + ${producto.id}}"><button class="btn btn-outline-warning"><i class="far fa-edit"></i></button></a></td>
+            <td><a th:href="@{'/producto/borrar/' + ${producto.id}}"><button class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button></a></td>
+        </tr>
+        </tbody>
+    </table>
+    <a th:href="@{/producto/nuevo}"><button class="btn btn-success btn-lg"><i class="fa-solid fa-circle-plus"></i> Nuevo Producto</button></a>
+</div>
+
+<footer th:insert="fragments :: footer"></footer>
+<div th:insert="fragments :: scripts"></div>
 </body>
 </html>
