--- a/src/main/resources/templates/producto/editar.html
+++ b/src/main/resources/templates/producto/editar.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:insert="fragments :: headerfiles">
 </head>
 <body>
@@ -11,6 +12,11 @@
             <h5 class="mb-4">Editar producto</h5>
             <form th:action="@{/producto/actualizar}" method="post">
                 <input type="hidden" id="id" name="id" th:value="${producto.id}">
+
+                <!-- inicio control ataque csrf -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <!-- fin control ataque csrf -->
+
                 <div class="form-group">
                     <label for="nombre">Nombre del producto</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" required="required" autocomplete="off" th:value="${producto.nombre}">
