--- a/src/main/resources/templates/forbidden.html
+++ b/src/main/resources/templates/forbidden.html
@@ -8,7 +8,7 @@
 
 <div class="container">
     <div class="jumbotron">
-        <h1 class="display-4">Página no encontrada 404</h1>
+        <h1 class="display-4">No autorizado 403</h1>
         <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
         <hr class="my-4">
         <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
