--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:insert="fragments :: headerfiles">
 </head>
 <body>
@@ -7,7 +8,8 @@
 
     <div class="container">
         <div class="jumbotron">
-            <h1 class="display-4">Hello, world!</h1>
+            <h1 class="display-4" sec:authorize="!isAuthenticated()">Debes iniciar sesión</h1>
+            <h1 class="display-4" sec:authorize="isAuthenticated()">Hola <span sec:authentication="name"></span></h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
