--- a/src/main/resources/templates/producto/lista.html
+++ b/src/main/resources/templates/producto/lista.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:insert="fragments :: headerfiles">
 </head>
 <body>
@@ -12,8 +13,8 @@
             <th scope="col">Nombre</th>
             <th scope="col">Precio</th>
             <th scope="col">Ver</th>
-            <th scope="col">Editar</th>
-            <th scope="col">Eliminar</th>
+            <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')">Editar</th>
+            <th scope="col" sec:authorize="hasRole('ROLE_ADMIN')">Eliminar</th>
         </tr>
         </thead>
         <tbody>
@@ -21,12 +22,12 @@
             <td th:text="${producto.nombre}"></td>
             <td th:text="${producto.precio}"></td>
             <td><a th:href="@{'/producto/detalle/' + ${producto.id}}"><button class="btn btn-outline-primary"><i class="far fa-eye"></i></button></a></td>
-            <td><a th:href="@{'/producto/editar/' + ${producto.id}}"><button class="btn btn-outline-warning"><i class="far fa-edit"></i></button></a></td>
-            <td><a th:href="@{'/producto/borrar/' + ${producto.id}}"><button class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button></a></td>
+            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{'/producto/editar/' + ${producto.id}}"><button class="btn btn-outline-warning"><i class="far fa-edit"></i></button></a></td>
+            <td sec:authorize="hasRole('ROLE_ADMIN')"><a th:href="@{'/producto/borrar/' + ${producto.id}}"><button class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button></a></td>
         </tr>
         </tbody>
     </table>
-    <a th:href="@{/producto/nuevo}"><button class="btn btn-success btn-lg"><i class="fa-solid fa-circle-plus"></i> Nuevo Producto</button></a>
+    <a sec:authorize="hasRole('ROLE_ADMIN')" th:href="@{/producto/nuevo}"><button class="btn btn-success btn-lg"><i class="fa-solid fa-circle-plus"></i> Nuevo Producto</button></a>
 </div>
 
 <footer th:insert="fragments :: footer"></footer>
