--- a/src/main/resources/templates/producto/nuevo.html
+++ b/src/main/resources/templates/producto/nuevo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:insert="fragments :: headerfiles">
 </head>
 <body>
@@ -10,6 +11,11 @@
         <div class="col-md-4 mx-auto">
             <h5 class="mb-4">Nuevo producto</h5>
             <form th:action="@{/producto/guardar}" method="post">
+
+                <!-- inicio control ataque csrf -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                <!-- fin control ataque csrf -->
+
                 <div class="form-group">
                     <label for="nombre">Nombre del producto</label>
                     <input type="text" class="form-control" id="nombre" name="nombre" required="required" autocomplete="off">
